fixed the footer on safari

--- a/views/css/partials/_layout.sass
+++ b/views/css/partials/_layout.sass
@@ -167,11 +167,11 @@ body
     #facebook
       +clearfix
       float: right
-      width: 260px
+      width: 270px
 
       p
         float: left
-        width: 210px
+        width: 220px
 
       a
         display: block
